--- a/Spring/Spring 핵심 원리 - 기본편/4. 스프링 컨테이너와 스프링 빈.md
+++ b/Spring/Spring 핵심 원리 - 기본편/4. 스프링 컨테이너와 스프링 빈.md
@@ -151,6 +151,7 @@ for (String beanDefinitionName : beanDefinitionNames) {
 
 - `모든 빈 출력하기` : 스프링에 등록된 모든 빈 정보를 출력해준다.
   - `ac.getBeanDefinitionNames()` : 스프링에 등록된 모든 빈 값이 배열 형태로 리턴된다.
+  - `ac.getBeanDefinition()` : 빈에 대한 메타 정보들을 반환하며, 코드에서는 스프링이 내부에서 사용하는 빈을 `getRole()`로 구분하기 위해 사용함.
   - `ac.getBean()` : 빈 이름으로 빈 객체(인스턴스)를 조회한다.
   - 결과 출력
 <p align=center>
@@ -587,3 +588,79 @@ xml 기반으로 설정하는 것은 최근에 잘 사용하지 않으므로 이
 </br>
 
 ## 스프링 빈 설정 메타 정보 - BeanDefinition
+
+스프링이 어떻게 다양한 설정 형식을 지원하는 중심에는 `BeanDefinition`이라는 추상화가 있다. </br>
+쉽게 얘기하면 **역할과 구현**을 개념적으로 나눈 것이다.
+- XML을 읽어서 BeanDefinition을 만들면 된다.
+- 자바 코드를 읽어서 BeanDefinition을 만들면 된다.
+- 즉, 스프링 컨테이너는 자바 코드인지, XML인지 몰라도 되고 오직 BeanDefinition만 알면 된다.
+
+`BeanDefinition`을 빈 설정 메타정보라고 하며, `@Bean`, `<bean>`당 각각 하나씩 메타 정보가 생성되고, 스프링 컨테이너는 이 메타정보를 기반으로 스프링 빈을 생성한다.
+
+- ?
+<p align=center>
+<img width="614" alt="스크린샷 2024-01-29 15 11 41" src="https://github.com/hamsangjin/TIL/assets/103736614/1b3569cb-b494-402b-ac52-fd94872ca14b">
+</p>
+
+- `AnnotationConfigApplicationContext`는 `AnnotatedBeanDefinitionReader`를 사용해서 `AppConfig.class`를 읽고 `BeanDefinition`을 생성한다.
+- `GenericXmlApplicationContext`는 `XmlBeanDefinitionReader`를 사용해서 `appConfig.xml`설정 정보를 읽고 `BeanDefinition`을 생성한다.
+- 새로운 형식의 설정 정보가 추가되면, `XxxBeanDefinitionReader`를 만들어서 `BeanDefinition`을 생성하면 된다.
+
+</br>
+
+### BeanDefinition 정보
+- `BeanClassName` : 생성할 빈의 클래스 명(자바 설정처럼 팩토리 역할의 빈을 사용하면 없음)
+- `factoryBeanName` : 팩토리 역할의 빈을 사용할 경우의 이름, ex) appConfig
+- `factoryMethodName` : 빈을 생성할 팩토리 메서드 지정, ex) memberService
+- `Scope` : 싱글톤(기본값)
+- `lazyinit` : 스프링 컨테이너를 생성할 때 빈을 생성하는 것이 아니라, 실제 빈을 사용할 때까지 최대한 생성을 지연처리하는지에 대한 여부
+- `initMethodName` : 빈을 생성하고, 의존관계를 적용한 뒤에 호출되는 초기화 메소드 명
+- `DestroyMethodName` : 빈의 생명주기가 끝나서 제거하기 직전에 호출되는 메소드 명
+- `Constructor arguments`, `Properties` : 의존관계 주입에서 사용(자바 설정처럼 팩토리 역할의 빈을 사용하면 없음)
+
+</br>
+
+- test/java/hello/core/beandefinition/BeanDefinitionTest.java
+```java
+package hello.core.beandefinition;
+
+import hello.core.AppConfig;
+import org.junit.jupiter.api.DisplayName;
+import org.junit.jupiter.api.Test;
+import org.springframework.beans.factory.config.BeanDefinition;
+import org.springframework.context.annotation.AnnotationConfigApplicationContext;
+
+public class BeanDefinitionTest {
+
+    AnnotationConfigApplicationContext ac = new AnnotationConfigApplicationContext(AppConfig.class);
+
+    @Test
+    @DisplayName("빈 설정 메타정보 확인")
+    void findApplicationBean(){
+        String[] beanDefinitionNames = ac.getBeanDefinitionNames();                    // 스프링에 등록된 스프링빈이름들 리턴
+        for (String beanDefinitionName : beanDefinitionNames) {  
+            BeanDefinition beanDefinition = ac.getBeanDefinition(beanDefinitionName);  // 
+
+            if (beanDefinition.getRole() == BeanDefinition.ROLE_APPLICATION) {
+                System.out.println("beanDefinitionName: " + beanDefinitionName + ", beanDefinition: " + beanDefinition);
+            }
+        }
+    }
+}
+```
+
+- 출력 결과
+```
+beanDefinitionName: appConfig, beanDefinition: Generic bean: class [hello.core.AppConfig$$SpringCGLIB$$0]; scope=singleton; abstract=false; lazyInit=null; autowireMode=0; dependencyCheck=0; autowireCandidate=true; primary=false; factoryBeanName=null; factoryMethodName=null; initMethodNames=null; destroyMethodNames=null
+beanDefinitionName: memberRepository, beanDefinition: Root bean: class [null]; scope=; abstract=false; lazyInit=null; autowireMode=3; dependencyCheck=0; autowireCandidate=true; primary=false; factoryBeanName=appConfig; factoryMethodName=memberRepository; initMethodNames=null; destroyMethodNames=[(inferred)]; defined in hello.core.AppConfig
+beanDefinitionName: discountPolicy, beanDefinition: Root bean: class [null]; scope=; abstract=false; lazyInit=null; autowireMode=3; dependencyCheck=0; autowireCandidate=true; primary=false; factoryBeanName=appConfig; factoryMethodName=discountPolicy; initMethodNames=null; destroyMethodNames=[(inferred)]; defined in hello.core.AppConfig
+beanDefinitionName: memberService, beanDefinition: Root bean: class [null]; scope=; abstract=false; lazyInit=null; autowireMode=3; dependencyCheck=0; autowireCandidate=true; primary=false; factoryBeanName=appConfig; factoryMethodName=memberService; initMethodNames=null; destroyMethodNames=[(inferred)]; defined in hello.core.AppConfig
+beanDefinitionName: orderService, beanDefinition: Root bean: class [null]; scope=; abstract=false; lazyInit=null; autowireMode=3; dependencyCheck=0; autowireCandidate=true; primary=false; factoryBeanName=appConfig; factoryMethodName=orderService; initMethodNames=null; destroyMethodNames=[(inferred)]; defined in hello.core.AppConfig
+```
+
+</br>
+
+### 정리
+`BeanDefinition`을 직접 생성해서 스프링 컨테이너에 등록할 수도 있지만, 실무에서는 `BeanDefinition`을 직접 정의하거나 사용할 일을 거의 없다. </br>
+따라서, `BeanDefinition`에 대한 깊이있는 이해보다는, 스프링이 다양한 형태의 설정 정보를 `BeanDefinition`으로 추상화해 사용하는구나 ~ 정도만 이해하면 된다. </br>
+가끔 스프링 코드나 스프링 관련 오픈소스의 코드를 볼 때, `BeanDefinition`이라는 것이 보일 때가 있는데, 이때 이런 메커니즘을 생각하면 된다.
